# diploma

./: CMakeLists.txt  README.md
common/: CMakeLists.txt
common/gui/: ImGuiRenderer.cpp
common/modules/: CMakeLists.txt  RenderPacket.hpp
common/modules/CBT/: CBTree.cpp
common/modules/CBT/shaders/: cbt_prepare_indirect.comp  cbt_reduction_prepass.comp  cbt_sum_reduction.comp
common/modules/Light/: LightModule.cpp  LightModule.hpp
common/modules/Light/shaders/: displace_lights.comp
common/modules/TerrainGenerator/: TerrainGeneratorModule.cpp  TerrainGeneratorModule.hpp
common/modules/TerrainRender/: TerrainRenderModule.cpp  TerrainRenderModule.hpp
common/modules/TerrainRender/shaders/: clipmap.frag  (+2 more)
common/modules/TerrainRenderCBT/: TerrainRenderModule.cpp  TerrainRenderModule.hpp
common/modules/WaterRender/: WaterRenderModule.cpp  WaterRenderModule.hpp
common/modules/WaterRenderCBT/: CMakeLists.txt  WaterRenderModule.cpp  WaterRenderModule.hpp
common/modules/WaterRenderCBT/shaders/: WaterParams.h  subdivision_merge.tesc  subdivision_split.tesc  water.frag
common/render_utils/: CMakeLists.txt
common/render_utils/shaders/: frustum_culling.glsl  quad.frag  quad.vert
common/scene/: CMakeLists.txt  Camera.hpp  RenderStructs.hpp  SceneManager.cpp  SceneManager.hpp  TerrainManager.cpp  TerrainManager.hpp
resources/scenes/Avocado/: Avocado_baked.gltf
tasks/: CMakeLists.txt
tasks/cbt/renderer/: App.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/cbt/renderer/modules/CBT/: CBTree.cpp  CBTree.hpp  CMakeLists.txt
tasks/cbt/renderer/modules/CBT/shaders/: cbt.glsl  decoy.vert  leb.vert  process.tese  terrain.frag
tasks/cbt/renderer/modules/TerrainRender/: CMakeLists.txt  TerrainRenderModule.cpp  TerrainRenderModule.hpp
tasks/cbt/renderer/modules/TerrainRender/shaders/: SubdivisionParams.h  clipmap.vert  decoy.vert  process.tese  subdivision_merge.tesc  subdivision_split.tesc  terrain.frag
tasks/cbt_static/renderer/: CMakeLists.txt  Renderer.cpp  Renderer.hpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/cbt_static_nongen/renderer/: App.cpp  CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/cbt_static_nongen/renderer/local_modules/: CMakeLists.txt
tasks/cbt_static_nongen/renderer/local_modules/TerrainRenderCBT/: CMakeLists.txt  TerrainRenderModule.cpp  TerrainRenderModule.hpp
tasks/cbt_static_nongen/renderer/local_modules/TerrainRenderCBT/shaders/: SubdivisionParams.h  process.tese  process_contrast.tese  subdivision_merge.tesc  subdivision_split.tesc  terrain.frag  terrain_contrast.frag
tasks/cbt_static_nongen/renderer/shaders/: shading.frag  shading_contrast.frag
tasks/cbt_water/renderer/: App.hpp  CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/cbt_water/renderer/local_modules/: CMakeLists.txt
tasks/cbt_water/renderer/local_modules/WaterRenderCBT/: WaterRenderModule.cpp  WaterRenderModule.hpp
tasks/cbt_water/renderer/local_modules/WaterRenderCBT/shaders/: process.tese  subdivision_merge.tesc  subdivision_split.tesc
tasks/cbt_water/renderer/shaders/: cubemap.frag  cubemap.vert
tasks/clipmap/renderer/: App.cpp  CMakeLists.txt  GBuffer.cpp  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/clipmap/renderer/modules/: CMakeLists.txt
tasks/clipmap/renderer/modules/Light/: LightModule.cpp
tasks/clipmap/renderer/modules/TerrainGenerator/: CMakeLists.txt  TerrainGeneratorModule.cpp  TerrainGeneratorModule.hpp
tasks/clipmap/renderer/modules/TerrainGenerator/shaders/: TerrainGenerationParams.h  generator.frag
tasks/clipmap/renderer/modules/TerrainRender/: TerrainRenderModule.cpp  TerrainRenderModule.hpp
tasks/clipmap/renderer/modules/TerrainRender/shaders/: TerrainParams.h  clipmap.frag
tasks/clipmap/renderer/modules/WaterRender/: WaterRenderModule.cpp  WaterRenderModule.hpp
tasks/clipmap/renderer/shaders/: shading.frag
tasks/clipmap/renderer/shaders/clipmap/: clipmap.vert
tasks/clipmap/renderer/shaders/terrain/: chunk.vert  subdivide_chunk.tesc
tasks/clipmap_static/renderer/: App.cpp  CMakeLists.txt  WorldRenderer.cpp  WorldRenderer.hpp
tasks/clipmap_static/renderer/local_modules/TerrainRender/: CMakeLists.txt  TerrainRenderModule.cpp
tasks/clipmap_static/renderer/local_modules/TerrainRender/shaders/: clipmap.frag  clipmap_contrast.frag  clipmap_contrast.vert  culling.comp
tasks/clipmap_static/renderer/shaders/: shading_contrast.frag
tasks/clipmap_static_nongen/renderer/: App.cpp  CMakeLists.txt  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/clipmap_static_nongen/renderer/local_modules/: CMakeLists.txt
tasks/clipmap_static_nongen/renderer/local_modules/TerrainRender/: CMakeLists.txt  TerrainRenderModule.cpp  TerrainRenderModule.hpp
tasks/clipmap_static_nongen/renderer/shaders/: shading_contrast.frag
tasks/clipmap_upd/renderer/: CMakeLists.txt  WorldRenderer.cpp
tasks/clipmap_water/renderer/: App.cpp  CMakeLists.txt  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
tasks/clipmap_water/renderer/local_modules/: CMakeLists.txt
tasks/clipmap_water/renderer/local_modules/WaterRender/: CMakeLists.txt  WaterRenderModule.cpp  WaterRenderModule.hpp
tasks/clipmap_water/renderer/local_modules/WaterRender/shaders/: culling.comp
tasks/main/renderer/: CMakeLists.txt  Renderer.cpp  WorldRenderer.cpp  WorldRenderer.hpp
(+41 files in other folders)
